<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="com.victorrubia.tfg.MainActivity">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/recoverbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_recover_text"
            app:layout_constraintTop_toBottomOf="@+id/password_box"
            app:layout_constraintStart_toStartOf="@+id/password_box"
            app:icon="@drawable/ic_baseline_key_24"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_marginTop="10dp"
            android:onClick="passwordRecoveryPage"/>

    <Button
            android:text="@string/boton_entrar"
            android:layout_width="309dp"
            android:layout_height="68dp"
            android:id="@+id/boton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/recoverbutton"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="319dp"
            android:layout_height="60dp"
            android:rotationY="0"
            android:id="@+id/email_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:id="@+id/email"
                android:maxLines="1"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="319dp"
            android:layout_height="60dp"
            android:id="@+id/password_box"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_box"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:id="@+id/password"
                android:maxLines="1"
                android:inputType="text"
                />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab_content_desc"
            app:srcCompat="@drawable/ic_baseline_attribution_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="aboutPage"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_dibujo"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="130dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/boton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.5"
            android:visibility="gone"
            app:lottie_rawRes="@raw/lf30_editor_so5kip5m"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>