<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PasswordRecoveryActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topAppBarConjunto"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                style="?attr/collapsingToolbarLayoutMediumStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutMediumSize">

            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/recover_password_title"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    style="@style/Widget.Material3.AppBarLayout"
                    />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="110dp"
            app:layout_constraintTop_toBottomOf="@id/topAppBarConjunto">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/background"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="4dp"
                    android:padding="10dp"
                    tools:background="@color/white">

                <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animacion_forgot_password"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintWidth_percent="0.6"
                        android:visibility="visible"
                        app:lottie_rawRes="@raw/forgot_password"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:layout_constraintHorizontal_bias="0.5"
                        />


                <TextView
                        android:id="@+id/explanation_password_recovery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:text="@string/explanation_password_recovery"
                        android:textAlignment="center"
                        android:textStyle="normal"
                        android:textSize="16sp"
                        android:textColor="@color/text_color"
                        app:layout_constraintTop_toBottomOf="@+id/animacion_forgot_password"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:rotationY="0"
                        android:paddingTop="10dp"
                        android:id="@+id/email_box"
                        android:layout_gravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/explanation_password_recovery"
                        android:layout_marginTop="0dp">


                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:id="@+id/email_recover_password"
                            android:maxLines="1"
                            android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/send_email_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Enviar solicitud"
                        android:textSize="17sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/email_box"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:icon="@drawable/ic_baseline_check_circle_outline_24"
                        style="@style/Widget.Material3.Button.TonalButton.Icon"
                        />

                <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animacion_check_mail"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/send_email_button"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"

                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintWidth_percent="0.6"
                        android:visibility="gone"
                        app:lottie_rawRes="@raw/email_sent"
                        app:lottie_autoPlay="false"
                        app:lottie_loop="false"
                        app:layout_constraintHorizontal_bias="0.5"
                        />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>