<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.victorrubia.tfg.LoggedActivity">

<data class="MainBinding">

    <variable
            name="viewModel"
            type="com.victorrubia.tfg.LoadingViewModel" />

    <import type="com.eudycontreras.boneslibrary.properties.ShapeType" />

    <import
            alias="Utils"
            type="com.eudycontreras.boneslibrary.extensions.NumberExtensionsKt" />

</data>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.eudycontreras.boneslibrary.framework.BonePropertyHolder
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bonePropAllowSavedState="@{true}"
            app:bonePropColor="@{@color/bone_color}"
            app:bonePropCornerRadius="@{Utils.getDp(10)}"
            app:bonePropId="@{1}"
            app:bonePropShimmerRayColor="@{@color/bone_ray_color_alt}"
            app:bonePropShimmerRayCount="@{3}"
            app:bonePropShimmerRayInterpolator="@{@android:interpolator/fast_out_slow_in}"
            app:bonePropShimmerRaySharedInterpolator="@{true}"
            app:bonePropShimmerRaySpeedMultiplier="@{1f}"
            app:bonePropShimmerRayThicknessRatio="@{0.5f}"
            app:bonePropMinThickness="@{Utils.getDp(6)}"
            app:bonePropMaxThickness="@{Utils.getDp(6)}"
            app:bonePropSectionDistance="@{Utils.getDp(6)}"
            app:bonePropShimmerRayTilt="@{-0.2f}"
            app:bonePropTransitionDuration="@{400L}" />

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true"
            android:id="@+id/appBarLayout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                style="?attr/collapsingToolbarLayoutMediumStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutMediumSize">

            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="Inicio"
                    app:menu="@menu/top_app_bar_logged"
                    style="@style/Widget.Material3.AppBarLayout"
                    />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="110dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/background"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="4dp"
                    android:padding="10dp"
                    bones:skeletonEnabled="@{viewModel.loading}"
                    bones:skeletonGenerateBones="@{true}"
                    bones:skeletonAllowSavedState="@{true}"
                    bones:skeletonUseStateTransition="@{true}"
                    bones:skeletonTransitionDuration="@{200L}"
                    bones:skeletonBoneColor="@{@color/bone_color}"
                    bones:skeletonBoneCornerRadius="@{Utils.getDp(10)}"
                    bones:skeletonBoneMaxThickness="@{Utils.getDp(20)}"
                    bones:skeletonBoneMinThickness="@{Utils.getDp(10)}"
                    bones:skeletonShimmerRayColor="@{@color/bone_ray_color}"
                    bones:skeletonShimmerRayCount="@{4}"
                    bones:skeletonShimmerRayInterpolator="@{@android:interpolator/accelerate_quad}"
                    bones:skeletonShimmerRaySharedInterpolator="@{true}"
                    bones:skeletonShimmerRaySpeedMultiplier="@{1f}"
                    bones:skeletonShimmerRayThicknessRatio="@{0.45f}"
                    bones:skeletonShimmerRayTilt="@{-0.2f}"
                    tools:background="@color/white">

                <TextView
                        android:id="@+id/textThree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="0dp"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:tag="text 2"
                        android:text="@{viewModel.usuario.name}"
                        android:textAlignment="gravity"
                        android:textStyle="normal"
                        android:textSize="23sp"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        bones:skeletonBoneShadeMultiplier="@{0.9f}"
                        tools:targetApi="o"
                        tools:text="@string/nombre"/>

                <TextView
                        android:id="@+id/textSix"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="6dp"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:tag="text 2"
                        android:text="@{viewModel.usuario.surname}"
                        android:textAlignment="gravity"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textThree"
                        bones:skeletonBoneShadeMultiplier="@{0.9f}"
                        tools:targetApi="o"
                        tools:text="@string/apellidos"/>



                <TextView
                        android:id="@+id/textFour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="12dp"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:tag="text 2"
                        android:textSize="17sp"
                        android:text="@string/connection_status"
                        android:textAlignment="gravity"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textSix" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>